@@ -1,4 +1,7 @@
 1.2.1i2:
+    Core:
+    * Improved validation of inventory data reported by checks
+
     Event Console:
     * Moved source of Event Console into Check_MK project 
 
